<resources>
    <string name="app_name">Cinematics</string>

    <string name="placeholder_password">Password...</string>
    <string name="placeholder_confirm_password">Confirm password...</string>
    <string name="placeholder_mail">example@example.com</string>

    <string name="title_activity_main">Cinematics</string>
    <string name="txt_trending">Trending</string>
    <string name="txt_no_item_found">No Item found</string>
    <string name="txt_top_rated">Top Rated</string>
    <string name="txt_overview_section">Overview</string>
    <string name="txt_cast_section">Cast</string>
    <string name="txt_rating_section">Ratings - %1$.1f</string>
    <string name="txt_recomendation_section">You may also like</string>
    <string name="txt_user_profile">Profile</string>
    <string name="txt_user_info_tittle">About me</string>
    <string name="txt_bio_tittle">Bio</string>
    <string name="txt_add_to_watch_btn">Add to watchlist</string>
    <string name="txt_remove_to_watch_btn">Remove to watchlist</string>
    <string name="txt_watch_list">Watchlist</string>
    <string name="txt_login_btn">Login with email</string>
    <string name="txt_login_with_google_btn">Login with google</string>
    <string name="txt_create_account">Create account or use anonymous</string>
    <string name="txt_next_button">Next step</string>
    <string name="txt_create_account_button">Create account</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_camera_option">Take from camera</string>
    <string name="txt_upload_option">Upload from device</string>
    <string name="txt_scroll_up">Scroll up</string>
    <string name="txt_not_available">N/A</string>
    <string name="txt_error_permission">Permission for camera is need to take photo</string>
    <string name="txt_birth_date">Birth date : %1s</string>
    <string name="txt_email">Email : %1s</string>
    <string name="txt_gender">Gender : %1s</string>
    <string name="txt_location">Location : %1s</string>
    <string name="txt_overview_preview_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Curabitur eu ipsum nulla. Maecenas aliquam consequat dui non ullamcorper.
        Curabitur laoreet finibus facilisis. Morbi sit amet sollicitudin odio, at lobortis erat.
        Nunc eget arcu nunc. Quisque placerat metus tempus, varius lacus at, varius est.
        Maecenas auctor dui a eros malesuada congue. Donec nec venenatis libero.
        Nunc eget arcu nunc. Quisque placerat metus tempus, varius lacus at, varius est.
        Maecenas auctor dui a eros malesuada congue. Donec nec venenatis libero</string>

    <string name="content_descrip_read_more">Button read more on overview</string>
    <string name="content_descrip_watch_list">watchlist movies</string>
    <string name="content_descrip_back_fab">Back button</string>
    <string name="content_descrip_star_rating">Star number rating</string>
    <string name="content_descrip_trending">trending movies</string>
    <string name="content_descrip_movie_image">Picture of the movies</string>
    <string name="content_descript_fab_view_switch">Button to switch view</string>
    <string name="content_descrip_trending_screen">trending movies screen</string>
    <string name="content_descrip_top_rated_screen">Top rated movies screen</string>
    <string name="content_descrip_watchlist_screen">Watchlist movies screen</string>
    <string name="content_descrip_user_profile">User profile</string>
    <string name="content_descrip_password_icon">Password icon</string>
    <string name="content_descrip_mail_icon">Mail icon</string>
    <string name="content_descrip_top_rated">top rated movies</string>
    <string name="content_descrip_photo_profile">Your profile picture</string>


    <string name="label_movie_year">Year: %1$s</string>
    <string name="label_movie_duration">Duration: %1$s</string>
    <string name="label_movie_author">Author: %1$s</string>
    <string name="label_backdrop_animation">Backdrop animation</string>
    <string name="label_first_name">First name *</string>
    <string name="label_last_name">Last name</string>
    <string name="label_user_name">User name</string>
    <string name="label_user_mail">Email *</string>
    <string name="label_day_of_birth">Day</string>
    <string name="label_month_of_birth">Month</string>
    <string name="label_year_of_birth">Year</string>
    <string name="label_location">Location</string>
    <string name="label_password">Password *</string>
    <string name="label_confirm_password">Confirm password *</string>
    <string name="label_gender">Gender</string>
    <string name="label_birth_date">Birth date *</string>
    <string name="label_trending_radio_button">Trending</string>
    <string name="label_top_rated_radio_button">Top rated</string>"
    <string name="label_newest_radio_button">Newest</string>

    <string name="action_label_login">Login</string>

    <string name="test_tag_card">card_test_tag</string>
    <string name="test_tag_overview">overview_test_tag</string>
    <string name="test_tag_button">button_test_tag</string>
    <string name="test_tag_bottom_nav">bottom_nav_test_tag</string>
    <string name="test_tag_fab_view_switch">test_tag_fab_view_switch</string>
    <string name="test_tag_detail_content">details_content_test_tag</string>
    <string name="test_tag_login_screen">login_screen_test_tag</string>

    <string name="password_confirmation_error">Password doesn\'t match</string>
    <string name="password_pattern_error">Password must have uppercase, lowercase, digit and special characters and at least 8 characters</string>
    <string name="login_request">You must be logged in or create account to have watch list</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>